Redesign new User and fix meals
Redesigned newUser page and fixed meal request checkbox alignment

--- a/public/app/views/pages/meals.html
+++ b/public/app/views/pages/meals.html
@@ -3,7 +3,7 @@
         <md-card-content>
 
             <form ng-submit="meals.askMeal()" layout="column">
-                <div layout="row">
+                <div layout="row" id="mealreq">
                     <md-input-container flex>
                         <label>Número</label>
                         <input name="clientName" type="number" ng-model="meals.mealAsked.id">
