--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -149,3 +149,53 @@ md-datepicker{
 md-input-container{
     width: 100%;
 }
+
+/* 
+    Calendar icon
+-------------------------
+Modified from: https://www.sitepoint.com/create-calendar-icon-html5-css3/
+
+*/
+
+time.icon{
+  top:20px;
+  right: 15px;
+  font-size: 0.4em; /* change icon size */
+  display: block;
+  position: relative;
+  width: 7em;
+  height: 7em;
+  background-color: #fff;
+  border-radius: 0.6em;
+  box-shadow: 0 1px 0 #bdbdbd, 0 2px 0 #fff, 0 3px 0 #bdbdbd, 0 4px 0 #fff, 0 5px 0 #bdbdbd, 0 0 0 1px #bdbdbd;
+  overflow: hidden;
+}
+
+time.icon *{
+  display: block;
+  width: 100%;
+  font-size: 1.3em;
+  font-weight: bold;
+  font-style: normal;
+  text-align: center;
+}
+
+time.icon strong{
+  position: absolute;
+  top: 0;
+  padding: 0.4em 0;
+  color: #fff;
+  background-color: #EC5564;
+  box-shadow: 0 2px 0 #EC5564;
+}
+
+time.icon span{
+  font-size: 2.8em;
+  letter-spacing: -0.05em;
+  padding-top: 1.1em;
+  color: #2f2f2f;
+}
+
+/* 
+    End calendar icon
+*/
