--- a/public/app/views/pages/login.html
+++ b/public/app/views/pages/login.html
@@ -1,8 +1,10 @@
 <md-card>
-  <md-card-content>
+  <md-card-content ng-init="main.checkErrors()">
     <img src="../assets/img/logoBN.jpg" alt="Logo de Ayete">
     <h1 class="md-display-1">Colegio Mayor Ayete</h1>
+
     <div class="logInGroup">
+      <p class="md-subhead" md-colors="{color:'warn'}" ng-if="main.errorLogIn"> ERROR: Dirección de correo incorrecta</p>
       <md-button ng-click="login.goLogIn()" ng-if="!login.processing" class="md-raised md-warn" aria-label="Acceder">
         <span class="fa fa-google-plus"></span> Iniciar Sesión</md-button>
       </md-button>
