--- a/public/app/views/pages/meals.html
+++ b/public/app/views/pages/meals.html
@@ -1,23 +1,25 @@
 <md-content class="normal" flex>
     <md-card>
-        <md-card-content>
-
-            <form ng-submit="meals.askMeal()" layout="column">
+        <md-card-content ng-init="meals.getLastDay()">
+            <form name="mealsForm" name="myForm" ng-submit="meals.askMeal()" layout="column">
                 <div layout="row" id="mealreq">
                     <md-input-container flex>
                         <label>Número</label>
-                        <input name="clientName" type="number" ng-model="meals.mealAsked.id">
+                        <input name="clientName" type="number" required ng-model="meals.mealAsked.id">
                     </md-input-container>
                     <md-checkbox flex ng-model="meals.repeat" aria-label="Repetir">Repetir cambio</md-checkbox>
                 </div>
 
                 <md-input-container>
-                    <label>Cambio</label>
-                    <md-select ng-model="meals.mealAsked.change">
-                        <md-option ng-repeat="request in meals.possibleRequests" value="{{ request.id }}">
-                            {{request.name }}
+                    <label>Cambio*</label>
+                    <md-select name="selectChange" ng-model="meals.mealAsked.change" required>
+                        <md-option ng-repeat="request in meals.possibleRequests| orderBy: $index" ng-value="{{ $index }}">
+                            {{request}}
                         </md-option>
                     </md-select>
+                        <div class="validation-messages" ng-messages="mealsForm.selectChange.$touched && mealsForm.selectChange.$error">
+                            <div ng-message="required">Campo obligatorio</div>
+                        </div>
                 </md-input-container>
 
                 <md-input-container ng-if="meals.repeat">
@@ -31,22 +33,34 @@
 
                 <div layout="row">
                     <span flex></span>
-                    <md-datepicker  ng-model="meals.mealAsked.date" md-placeholder="Fecha"></md-datepicker>
-                    <md-datepicker  ng-if="meals.repeat" ng-model="meals.mealAsked.endDate" md-placeholder="Hasta"></md-datepicker>
+                    <div style="text-align:center">
+                    <md-datepicker name="startDate" ng-model="meals.mealAsked.date" md-placeholder="Fecha*" md-min-date="meals.currentDate" required></md-datepicker>
+                        <div class="validation-messages" ng-messages="mealsForm.startDate.$touched && mealsForm.startDate.$error">
+                            <div ng-message="valid">El valor introducido no es válido</div>
+                            <div ng-message="required">Campo obligatorio</div>
+                            <div ng-message="mindate">La fecha mínima es superior a la seleccionada</div>
+                        </div>
+                    </div>
+                    <div style="text-align:center">
+                        <md-datepicker name="endDate" ng-if="meals.repeat" ng-model="meals.mealAsked.endDate" md-placeholder="Hasta*" md-min-date="meals.mealAsked.date" required></md-datepicker>
+                        <div class="validation-messages" ng-messages="mealsForm.endDate.$touched && mealsForm.endDate.$error">
+                            <div ng-message="valid">El valor introducido no es válido</div>
+                            <div ng-message="required">Campo obligatorio</div>
+                            <div ng-message="mindate">La fecha introducida no puede ser menor a la inicial</div>
+                        </div>
+                    </div>
                     <span flex></span>
                 </div>
 
                 <div layout="row">
-                <span flex></span>
-                <md-button type="submit" id="MealsButton" class="md-raised" ng-class="meals.MealError ? 'md-warn' : 'md-primary'" aria-label="Enviar">
-                    <span>{{ meals.mealButtontext }}</span>
-                </md-button>
-                <span flex></span>
+                    <span flex></span>
+                    <md-button type="submit" id="MealsButton" class="md-raised" ng-class="meals.MealError ? 'md-warn' : 'md-primary'" aria-label="Enviar">
+                        <span>{{ meals.mealButtontext }}</span>
+                    </md-button>
+                    <span flex></span>
                 </div>
             </form>
-
-            <p class="md-subhead" ng-init="meals.getLastDay()">Fecha mínima actual: <b>{{meals.currentDate | date : 'dd-MM-yyyy' }}</b></p>
-
+            <p class="md-subhead">Fecha mínima actual: <b>{{meals.currentDate | date : 'dd/MM/yyyy' }}</b></p>
         </md-card-content>
     </md-card>
 
@@ -54,11 +68,11 @@
     <md-card ng-init="meals.myMeals()">
         <md-card-content>
             <h2 class="md-headline">Mis pedidos</h2>
-            <md-divider ></md-divider>
+            <md-divider></md-divider>
             <md-list-item class="md-2-line" ng-repeat="request in meals.myRequests| orderBy:'date'" layout="row">
                 <div class="md-list-item-text" layout="column" flex>
                     <h3>{{ request.change }}</h3>
-                    <p>{{ request.date | date:'dd-MM-yyyy' }}</p>
+                    <p>{{ request.date | date:'dd/MM/yyyy' }}</p>
                 </div>
                 <md-button class="md-icon-button" aria-label="Borrar" style="margin-top:16px;" ng-click="meals.deleteRequest(request._id)">
                     <md-icon class="material-icons" aria-label="Actualizar fecha mínima">delete</md-icon>
