--- a/public/app/views/pages/meals.html
+++ b/public/app/views/pages/meals.html
@@ -67,15 +67,16 @@
 
     <md-card ng-init="meals.myMeals()">
         <md-card-content>
-            <h2 class="md-headline">Mis pedidos</h2>
+            <h2 class="md-headline">Mis cambios</h2>
             <md-divider></md-divider>
+            <p ng-if="meals.myRequests.length == 0">No has solicitado ningún cambio.</p>
             <md-list-item class="md-2-line" ng-repeat="request in meals.myRequests| orderBy:'date'" layout="row">
                 <div class="md-list-item-text" layout="column" flex>
                     <h3>{{ meals.possibleRequests[request.change] }}</h3>
-                    <p>{{ request.date | date:'dd/MM/yyyy' }}</p>
+                    <p>{{ request.showDate | date:'dd/MM/yyyy' }}</p>
                 </div>
-                <md-button class="md-icon-button" aria-label="Borrar" style="margin-top:16px;" ng-click="meals.deleteRequest(request._id)">
-                    <md-icon class="material-icons" aria-label="Actualizar fecha mínima">delete</md-icon>
+                <md-button ng-show="request.date > meals.currentDate" class="md-icon-button" aria-label="Borrar" style="margin-top:16px;" ng-click="meals.deleteRequest(request._id)">
+                    <md-icon class="material-icons" aria-label="Borrar cambio">delete</md-icon>
                 </md-button>
             </md-list-item>
 
