Empty match error

--- a/public/app/views/pages/newSport.html
+++ b/public/app/views/pages/newSport.html
@@ -3,7 +3,7 @@
         <form ng-submit="sports.isUpdate ? sports.editedMatch() : sports.addMatch()">
 
             <md-input-container>
-                <label>Tipo de deporte</label>
+                <label>Deporte</label>
                 <input name="clientName" type="text" ng-model="sports.match.name">
             </md-input-container>
 
