Meals md-datepicker responsive layout
Solved an issue that caused md-datepicker to be wider than the device
screen

--- a/public/app/views/pages/meals.html
+++ b/public/app/views/pages/meals.html
@@ -31,8 +31,7 @@
                     </md-select>
                 </md-input-container>
 
-                <div layout="row">
-                    <span hide-xs flex></span>
+                <div ng-if="meals.screenSize >= 376" layout="row" layout-align="center center">
                     <div style="text-align:center">
                     <md-datepicker name="startDate" ng-model="meals.mealAsked.date" md-placeholder="Fecha*" md-min-date="meals.currentDate" required></md-datepicker>
                         <div class="validation-messages" ng-messages="mealsForm.startDate.$touched && mealsForm.startDate.$error">
@@ -49,7 +48,25 @@
                             <div ng-message="mindate">La fecha introducida no puede ser menor a la inicial</div>
                         </div>
                     </div>
-                    <span hide-xs flex></span>
+                </div>
+
+                <div ng-if="meals.screenSize < 376" layout="column" layout-align="center center">
+                    <div style="text-align:center">
+                    <md-datepicker name="startDate" ng-model="meals.mealAsked.date" md-placeholder="Fecha*" md-min-date="meals.currentDate" required></md-datepicker>
+                        <div class="validation-messages" ng-messages="mealsForm.startDate.$touched && mealsForm.startDate.$error">
+                            <div ng-message="valid">El valor introducido no es válido</div>
+                            <div ng-message="required">Campo obligatorio</div>
+                            <div ng-message="mindate">La fecha mínima es superior a la seleccionada</div>
+                        </div>
+                    </div>
+                    <div style="text-align:center">
+                        <md-datepicker name="endDate" ng-if="meals.repeat" ng-model="meals.mealAsked.endDate" md-placeholder="Hasta*" md-min-date="meals.mealAsked.date" required></md-datepicker>
+                        <div class="validation-messages" ng-messages="mealsForm.endDate.$touched && mealsForm.endDate.$error">
+                            <div ng-message="valid">El valor introducido no es válido</div>
+                            <div ng-message="required">Campo obligatorio</div>
+                            <div ng-message="mindate">La fecha introducida no puede ser menor a la inicial</div>
+                        </div>
+                    </div>
                 </div>
 
                 <div layout="row">
