Fix typo after update

--- a/public/app/views/pages/meals.html
+++ b/public/app/views/pages/meals.html
@@ -11,7 +11,7 @@
                 </div>
 
                 <md-input-container>
-                    <label>Cambio*</label>
+                    <label>Cambio</label>
                     <md-select name="selectChange" ng-model="meals.mealAsked.change" required>
                         <md-option ng-repeat="request in meals.possibleRequests" ng-value="{{ $index }}">
                             {{request}}
