--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -78,7 +78,7 @@
         <md-nav-item md-nav-href="/books" name="/books" >Biblioteca</md-nav-item>
         <md-nav-item md-nav-href="/sports" name="/sports" >Deporte</md-nav-item>
         <md-nav-item md-nav-href="/events" name="/events" >Eventos</md-nav-item>
-        <md-nav-item md-nav-href="/settings" name="/settings" >Ajustes</md-nav-item>
+        <md-nav-item ng-show="userData.admin" md-nav-href="/settings" name="/settings" >Ajustes</md-nav-item>
       </md-nav-bar>
   </md-toolbar>
   <main ng-class="{login: !userData.isLogged, all: userData.isLogged}" flex layout="column">
