--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -37,13 +37,12 @@
   <!-- iPhone non-retina icon (iOS < 7) -->
   <link href="assets/appItems/icons/ios/57.png" sizes="57x57" rel="apple-touch-icon-precomposed">
 
-  <!-- JS -->
-  <script src="app/env.js"></script>
-  <!-- load angular and angular-route via CDN -->
+  <!-- load dependencies via CDN -->
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
+  <!-- JS -->
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>
 
