Max number of request
Limit number of rsimultaneous requests to 15

--- a/public/app/views/pages/meals.html
+++ b/public/app/views/pages/meals.html
@@ -29,6 +29,7 @@
                             {{repeat.name }}
                         </md-option>
                     </md-select>
+                    <p class="validation-messages">El número máximo de repeticiones en un solo pedido es de 15</p>
                 </md-input-container>
 
                 <div ng-if="meals.screenSize >= 376" layout="row" layout-align="center center">
