--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -186,7 +186,7 @@ time.icon strong{
 }
 
 time.icon span{
-  font-size: 20px;
+  font-size: 2.8em;
   letter-spacing: -0.05em;
   padding-top: 1.1em;
   color: #2f2f2f;
