[SOLVED] Check User numbers for meals
Download list of user’s IDs to check if user exist before requesting
meal

--- a/public/app/views/pages/meals.html
+++ b/public/app/views/pages/meals.html
@@ -1,5 +1,5 @@
 <md-content class="normal" flex>
-    <md-card>
+    <md-card ng-init="meals.allUserNumbers()">
         <md-card-content ng-init="meals.getLastDay()">
             <form name="mealsForm" name="myForm" ng-submit="meals.askMeal()" layout="column">
                 <div layout="row" id="mealreq">
