--- a/public/app/views/pages/meals.html
+++ b/public/app/views/pages/meals.html
@@ -91,9 +91,9 @@
             <md-list-item class="md-2-line" ng-repeat="request in meals.myRequests| orderBy:'date'" layout="row">
                 <div class="md-list-item-text" layout="column" flex>
                     <h3>{{ meals.possibleRequests[request.change] }}</h3>
-                    <p>{{ request.showDate | date:'dd/MM/yyyy' }}</p>
+                    <p>{{ request.date | date:'dd/MM/yyyy' }}</p>
                 </div>
-                <md-button ng-show="request.date >= meals.currentDate" class="md-icon-button" aria-label="Borrar" style="margin-top:16px;" ng-click="meals.deleteRequest(request._id)">
+                <md-button ng-show="request.reqDate >= meals.currentDate" class="md-icon-button" aria-label="Borrar" style="margin-top:16px;" ng-click="meals.deleteRequest(request._id)">
                     <md-icon class="material-icons" aria-label="Borrar cambio">delete</md-icon>
                 </md-button>
             </md-list-item>
