--- a/public/app/views/pages/settings.html
+++ b/public/app/views/pages/settings.html
@@ -1,5 +1,9 @@
 <md-card>
     <md-card-content ng-init="settings.loadSettingsData()">
+
+<input class="ng-hide" id="input-file-id" type="file" custom-on-change="settings.processCSV"/>
+<label for="input-file-id" class="md-button md-raised md-hue-2 md-accent">Choose Files</label>
+
         <md-list>
             <md-list-item class="md-2-line" ng-click="settings.gotoUsersList()">
                 <div class="md-list-item-text" layout="column">
