--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -43,20 +43,18 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
   <!-- JS -->
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.min.js"></script>
-
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-animate.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-aria.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-cookies.min.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
-  <script src="https://cdn.rawgit.com/auth0/angular-jwt/master/dist/angular-jwt.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-filter/0.5.9/angular-filter.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.10.6/moment.min.js"></script>
+  <script src="../../assets/libs/angular/angular.min.js"></script>
+  <script src="../../assets/libs/angular-route/angular-route.min.js"></script>
+  <script src="../../assets/libs/angular-animate/angular-animate.min.js"></script>
+  <script src="../../assets/libs/angular-aria/angular-aria.min.js"></script>
+  <script src="../../assets/libs/angular-cookies/angular-cookies.min.js"></script>
+  <script src="../../assets/libs/angular-material/angular-material.min.js"></script>
+  <script src="../../assets/libs/angular-jwt/dist/angular-jwt.min.js"></script>
+  <script src="../../assets/libs/angular-filter/dist/angular-filter.min.js"></script>
+  <script src="../../assets/libs/moment/min/moment.min.js"></script>
   <script src="../../assets/libs/papaparse/papaparse.min.js"></script>
-
+  <script src="../../assets/libs/angular-messages/angular-messages.min.js"></script>
   <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-114/svg-assets-cache.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-messages.min.js"></script>
 
   <!-- controllers -->
   <script src="app/controllers/mainController.js"></script>
