--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -7,7 +7,7 @@
   <!-- FOR ANGULAR ROUTING -->
   <base href="/">
 
-  <meta name="viewport" content="initial-scale=1" />
+  <meta name="viewport" content="width=device-width, user-scalable=no">
   
   <!-- Android Web App -->
   <link rel="manifest" href="manifest.json">
