--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -40,7 +40,7 @@
   <!-- load dependencies via CDN -->
   <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css">
   <!-- JS -->
   <script src="../../assets/libs/angular/angular.min.js"></script>
@@ -54,7 +54,7 @@
   <script src="../../assets/libs/moment/min/moment.min.js"></script>
   <script src="../../assets/libs/papaparse/papaparse.min.js"></script>
   <script src="../../assets/libs/angular-messages/angular-messages.min.js"></script>
-  <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/t-114/svg-assets-cache.js"></script>
+  <script src="../../assets/svg-assets-cache.js"></script>
 
   <!-- controllers -->
   <script src="app/controllers/mainController.js"></script>
