--- a/public/app/views/index.html
+++ b/public/app/views/index.html
@@ -56,7 +56,9 @@
   <script src="../../assets/libs/angular-messages/angular-messages.min.js"></script>
   <script src="../../assets/svg-assets-cache.js"></script>
 
-  <!-- controllers -->
+  <script src="../../dist/app.js"></script>
+
+  <!-- 
   <script src="app/controllers/mainController.js"></script>
   <script src="app/controllers/mealController.js"></script>
   <script src="app/controllers/settingsController.js"></script>
@@ -64,7 +66,6 @@
   <script src="app/controllers/eventsController.js"></script>
   <script src="app/controllers/sportsController.js"></script>
 
-  <!-- services -->
   <script src="app/services/authService.js"></script>
   <script src="app/services/mealService.js"></script>
   <script src="app/services/settingsService.js"></script>
@@ -72,13 +73,14 @@
   <script src="app/services/eventsService.js"></script>
   <script src="app/services/sportsService.js"></script>
 
-  <!-- main Angular app files -->
   <script src="app/app.routes.js"></script>
   <script src="app/app.js"></script>
 
+  -->
+
   <!-- CSS  -->
   <!-- load bootstrap from CDN and custom CSS -->
-  <link rel="stylesheet" href="assets/css/style.css">
+  <link rel="stylesheet" href="assets/css/style.min.css">
 </head>
 <body ng-app="cmayete" ng-controller="MainController as main" ng-class="{landing: !userData.isLogged, normal:userData.isLogged}" ng-cloak layout="column">
   <!-- NAVBAR -->
